--- a/src/components/ListGroup.module.css
+++ b/src/components/ListGroup.module.css
@@ -15,6 +15,7 @@
     width: 100%;
     height: 100%;
     margin-top: 30%;
+    animation: reveal 1.5s cubic-bezier(0.7, 0, 0.175, 1) 1s;
 }
 .introduction p{
     color: #ffff;
@@ -23,7 +24,17 @@
     font-family: 'Raleway', sans-serif;
     font-size: 16px;
     font-weight: 400;
+    display: block;
+    animation: reveal 1.5s cubic-bezier(0.77, 0, 0.175, 1) 1s;
 }
+@keyframes reveal {
+    0% {
+      transform: translate(0,100%);
+    }
+    100% {
+      transform: translate(0,0);
+    }
+  }
 .button {
     font-family: 'Raleway', sans-serif;
     margin-left: 30%;
